--- a/home.html
+++ b/home.html
@@ -2,16 +2,17 @@
 <html lang="es">
     <head>
         <style>
-            #azul{
-                background-color: #312783;
+            #azulito{
+                background-color: #1d71b8;
                 
             }
-            #beige{
-                background-color: #b2b2b2;
+            #azul{
+                background-color: #312783;
             }
         </style>
+        </style>
         <title>Home - ITBANK</title>
-        <link rel="icon" href="./images/logos/ISOLOGO ITBANK_Mesa de trabajo 1.png">
+        <link rel="icon" href="/ITBANK-GRUPO4-ATLAS/images/logos/logoescala-08.png">
 
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
         <link href="assets/vendor/aos/aos.css" rel="stylesheet">
@@ -25,7 +26,7 @@
         <nav class="navbar bg-light border-bottom">
             <div class="container">
                 <a class="navbar-brand" href="">
-                    <img src="./images/logos/logoescala-08.png" class="img-fluid float-start" alt="Logo ITBANK" width="336" height="115">
+                    <img src="/ITBANK-GRUPO4-ATLAS/images/logos/logomarginado-08.png" class="img-fluid float-start" alt="Logo ITBANK" width="336" height="115">
                 </a>
                 <div class="d-block w-auto">
                     <ul class="nav nav-tabs nav-fill fs-5">
@@ -56,7 +57,7 @@
                             </a>
                         </li>
                         <li  class="nav-item d-inline">
-                            <a class="nav-link link-success fw-bolder" href="signup.html">
+                            <a class="nav-link link-success fw-bolder" href="./singup.html">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-fill" viewBox="0 0 16 16">
                                     <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
                                 </svg>
@@ -93,7 +94,7 @@
                         </form>
                 </div>
                 <div class="col-md-6 px-0 d-none d-lg-block">
-                    <img src="./images/bonaerense/Jardin-Botanico-Recorte.jpeg" alt="Login image"
+                    <img src="/ITBANK-GRUPO4-ATLAS/images/bonaerense/Jardin-Botanico-Recorte.jpeg" alt="Login image"
                     class=" w-100 h-auto" style="object-fit: cover; object-position: left; border-top-right-radius: 50px;">
                 </div>
             </div>
@@ -142,7 +143,7 @@
                 <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 gx-4 mt-5">
                     <div class="col">
                         <div class="card shadow-sm">
-                            <img src="./images/corporativo/estados-financieros.jpg" class="img-fluid float-start" alt="Logo ITBANK" width="360" height="115">
+                            <img src="/ITBANK-GRUPO4-ATLAS/images/corporativo/estados-financieros.jpg" class="img-fluid float-start" alt="Logo ITBANK" width="360" height="115">
                 
                             <div class="card-body">
                                 <p class="card-text">El Directorio de la compañía presentó el Balance 2021, arrojando éste excelentes resultados, que fortalecen la confianza en nuestro banco y valorizan nuestros activos...</p>
@@ -154,7 +155,7 @@
                     </div>
                     <div class="col">
                         <div class="card shadow-sm">
-                            <img src="./images/corporativo/Acciones.jpeg" class="img-fluid float-start" alt="Logo ITBANK" width="360" height="115">
+                            <img src="/ITBANK-GRUPO4-ATLAS/images/corporativo/Acciones.jpeg" class="img-fluid float-start" alt="Logo ITBANK" width="360" height="115">
                             <div class="card-body">
                                 <p class="card-text">Nuestras acciones son referencia en el Panel Líder de BYMA, marcando los buenos rendimientos de la plaza local. Los resultados del 2021 fortalecen esa tendencia...</p>
                                 <div class="d-flex justify-content-between align-items-center">
@@ -165,7 +166,7 @@
                     </div>
                     <div class="col">
                         <div class="card shadow-sm">
-                            <img src="./images/corporativo/Inclusion.jpeg" class="img-fluid float-start" alt="Logo ITBANK" width="360" height="115">
+                            <img src="/ITBANK-GRUPO4-ATLAS/images/corporativo/Inclusion.jpeg" class="img-fluid float-start" alt="Logo ITBANK" width="360" height="115">
                             <div class="card-body">
                                 <p class="card-text">Fuimos reconocidos por nuestro programa de asistencia social e inclusión financiera, en el marco del Departamento de RSE. El BCRA reconoció nuestra labor...</p>
                                 <div class="d-flex justify-content-between align-items-center">
