--- a/singup.html
+++ b/singup.html
@@ -6,11 +6,12 @@
                 text-decoration: none;
                 color: white;
             }
+            #azulito{
+                background-color: #1d71b8;
+                
+            }
             #azul{
                 background-color: #312783;
-            }
-            #beige{
-                background-color: #b2b2b2;
             }
         </style>
         <title>Inicio de sesión - ITBANK</title>
@@ -46,8 +47,8 @@
     </head>
     <body id="background">
         <div class="text-center pb-5 bg-gradient">
-            <a href="/ITBANK-maqueta/">
-                <img src="./images/logos/logomarginado-08.png" class="img-fluid" alt="Logo ITBANK" width="336" height="115">
+            <a href="/ITBANK-GRUPO4-ATLAS/HTML/home.html">
+                <img src="/ITBANK-GRUPO4-ATLAS/images/logos/logomarginado-08.png" class="img-fluid" alt="Logo ITBANK" width="336" height="115">
             </a>
         </div>
 
