--- a/home-banking.html
+++ b/home-banking.html
@@ -20,7 +20,7 @@
             <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
 
                 <!-- Logo -->
-                <a class="navbar-brand px-3 pt-5" href="/ITBANK-GRUPO4-ATLAS/home.html">
+                <a class="navbar-brand px-3 pt-5" href="/ITBANK-GRUPO4-ATLAS/index.html">
                     <img src="/ITBANK-GRUPO4-ATLAS/images/logos/ISOLOGO.png" class="img-fluid float-start" alt="ITBANK" width="100" height="100">
                 </a>
                 <!-- Barra Lateral-->
@@ -45,20 +45,20 @@
                         <div class="sb-sidenav-menu">
                             <div class="nav">
                                 <div class="sb-sidenav-menu-heading d-lg-block"></div>
-                                <a class="nav-link" href="home.html">
+                                <a class="nav-link" href="./index.html">
                                     <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
                                     Mi panel
                                 </a> 
                                 <div class="sb-sidenav-menu-heading">Mi cuenta</div>
-                                <a class="nav-link" href="/home.html">
+                                <a class="nav-link" href="./index.html">
                                     <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
                                     Datos personales
                                 </a>
-                                <a class="nav-link" href="/home.html">
+                                <a class="nav-link" href="./index.html">
                                     <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
                                     Mi ahorro
                                 </a>
-                                <a class="nav-link" href="/home.html">
+                                <a class="nav-link" href="./index.html">
                                     <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
                                     Solicitudes y reclamos
                                 </a>
