--- a/home-banking.html
+++ b/home-banking.html
@@ -11,17 +11,18 @@
             }
         </style>
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <title>ITBANK Homebanking</title>
+        <title>Inicio | ITBANK</title>
         <link href="https://cdn.jsdelivr.net/npm/simple-datatables@latest/dist/style.css" rel="stylesheet" />
-        <link href="/ITBANK-GRUPO4-ATLAS/CSS/styles.css" rel="stylesheet" />
+        <link href="./CSS/styles.css" rel="stylesheet" />
         <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
+        <link rel="icon" href="./images/logos/ISOLOGO.png">
     </head>
         <body class="sb-nav-fixed">
             <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
 
                 <!-- Logo -->
-                <a class="navbar-brand px-3 pt-5" href="/ITBANK-GRUPO4-ATLAS/index.html">
-                    <img src="/ITBANK-GRUPO4-ATLAS/images/logos/ISOLOGO.png" class="img-fluid float-start" alt="ITBANK" width="100" height="100">
+                <a class="navbar-brand px-3 pt-5" href="./index.html">
+                    <img src="./images/logos/ISOLOGO.png" class="img-fluid float-start" alt="ITBANK" width="100" height="100">
                 </a>
                 <!-- Barra Lateral-->
                 <button class="btn btn-link btn-sm order-1 order-lg-0 me-4 me-lg-0" id="sidebarToggle" href="#!"><i class="fas fa-bars"></i></button>
