--- a/singup.html
+++ b/singup.html
@@ -19,7 +19,7 @@
         <link rel="icon" href="./images/logos/ISOLOGO.png">
 
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-        <link href="/ITBANK-GRUPO4-ATLAS/CSS/styles.css" rel="stylesheet"/>
+        <link href="./CSS/styles.css" rel="stylesheet"/>
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -47,8 +47,8 @@
     </head>
     <body id="background">
         <div class="text-center pb-5 bg-gradient">
-            <a href="/ITBANK-GRUPO4-ATLAS/index.html">
-                <img src="/ITBANK-GRUPO4-ATLAS/images/logos/logomarginado-08.png" class="img-fluid" alt="Logo ITBANK" width="336" height="115">
+            <a href="./index.html">
+                <img src="./images/logos/logomarginado-08.png" class="img-fluid" alt="Logo ITBANK" width="336" height="115">
             </a>
         </div>
 
