Cards en cotizaciones

--- a/index.html
+++ b/index.html
@@ -143,17 +143,17 @@
                 <div class="container my-5 text-center">
                     <h2 class="fw-normal">Cotizaciones</h2>
                     <div class="row">
-                        <div class="col" id="dolaroficial">Dólar BNA</div>
-                        <div class="col" id="dolarblue">Dólar blue</div>
-                        <div class="col" id="dolarsoja">Dólar soja</div>
+                        <div class="col card mb-4" id="dolaroficial">Dólar BNA</div>
+                        <div class="col card mb-4" id="dolarblue">Dólar blue</div>
+                        <div class="col card mb-4" id="dolarsoja">Dólar soja</div>
                     </div>
                     <div class="row">
-                        <div class="col" id="dolarccl">Dólar CCL</div>
-                        <div class="col" id="dolarbolsa">Dólar MEP</div>
-                        <div class="col" id="bitcoin">Bitcoin</div>
+                        <div class="col card mb-4" id="dolarccl">Dólar CCL</div>
+                        <div class="col card mb-4" id="dolarbolsa">Dólar MEP</div>
+                        <div class="col card mb-4" id="bitcoin">Bitcoin</div>
                     </div>
                     <div class="row">
-                        <div class="col" id="dolarturista">Dolar solidario</div>
+                        <div class="col card mb-4" id="dolarturista">Dolar solidario</div>
                     </div>
                 </div>
                 <hr>
