--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
                         <h2 class="fw-normal">Divisas</h2>
                         <p>Dólar, Euro, Real</p>
-                        <p><a class="btn btn-secondary" href="#">Ver Detalles »</a></p>
+                        <p><a id ="verDivisas" class="btn btn-secondary" href="#">Ver Detalles »</a></p>
                     </div>
                     <div class="col-lg-3">
                         <svg xmlns="http://www.w3.org/2000/svg" width="140" height="140" fill="currentColor" class="bi bi-credit-card-2-front-fill" viewBox="0 0 16 16">
