--- a/index.html
+++ b/index.html
@@ -141,19 +141,19 @@
                     </div>
                 </div>
                 <div class="container my-5 text-center">
-                    <h2 class="fw-normal">Cotizaciones</h2>
+                    <h2 class="fw-normal" id="cotizaciones">Cotizaciones</h2>
                     <div class="row">
-                        <div class="col card mb-4" id="dolaroficial">Dólar BNA</div>
-                        <div class="col card mb-4" id="dolarblue">Dólar blue</div>
-                        <div class="col card mb-4" id="dolarsoja">Dólar soja</div>
+                        <div class="col card mb-4 dolar" id="dolaroficial">Dólar BNA</div>
+                        <div class="col card mb-4 dolar" id="dolarblue">Dólar blue</div>
+                        <div class="col card mb-4 dolar" id="dolarsoja">Dólar soja</div>
                     </div>
                     <div class="row">
-                        <div class="col card mb-4" id="dolarccl">Dólar CCL</div>
-                        <div class="col card mb-4" id="dolarbolsa">Dólar MEP</div>
-                        <div class="col card mb-4" id="bitcoin">Bitcoin</div>
+                        <div class="col card mb-4 dolar" id="dolarccl">Dólar CCL</div>
+                        <div class="col card mb-4 dolar" id="dolarbolsa">Dólar MEP</div>
+                        <div class="col card mb-4 bitcoin" id="bitcoin">Bitcoin</div>
                     </div>
                     <div class="row">
-                        <div class="col card mb-4" id="dolarturista">Dolar solidario</div>
+                        <div class="col card mb-4 dolar" id="dolarturista">Dolar solidario</div>
                     </div>
                 </div>
                 <hr>
