--- a/index.html
+++ b/index.html
@@ -137,11 +137,11 @@
                 
                         <h2 class="fw-normal">Préstamos</h2>
                         <p>Tasa de referencia BCRA: 56,56%</p>
-                        <p><a class="btn btn-secondary" href="#">Ver Detalles »</a></p>
+                        <p><a class="btn btn-secondary" href="#" id="detalles">Ver Detalles »</a></p>
                     </div>
                 </div>
                 <div class="container my-5 text-center">
-                    <h2 class="fw-normal" id="cotizaciones">Cotizaciones</h2>
+                    <h2 class="fw-normal" id="cotizaciones" data-bs-toggle="collapse">Cotizaciones</h2>
                     <div class="row">
                         <div class="col card mb-4 dolar" id="dolaroficial">Dólar BNA</div>
                         <div class="col card mb-4 dolar" id="dolarblue">Dólar blue</div>
@@ -150,7 +150,7 @@
                     <div class="row">
                         <div class="col card mb-4 dolar" id="dolarccl">Dólar CCL</div>
                         <div class="col card mb-4 dolar" id="dolarbolsa">Dólar MEP</div>
-                        <div class="col card mb-4 bitcoin" id="bitcoin">Bitcoin</div>
+                        <div class="col card mb-4 dolar" id="bitcoin">Bitcoin</div>
                     </div>
                     <div class="row">
                         <div class="col card mb-4 dolar" id="dolarturista">Dolar solidario</div>
@@ -275,6 +275,7 @@
                     </ul>
                 </div>
             </div>
+            <script src="index.js"></script>
         </footer>
     </body>
 </html>
