--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                     </div>
                 </div>
                 <div class="container my-5 text-center">
-                    <h2 class="fw-normal" id="cotizaciones" data-bs-toggle="collapse">Cotizaciones</h2>
+                    <h2 class="fw-normal" id="cotizaciones">Cotizaciones</h2>
                     <div class="row">
                         <div class="col card mb-4 dolar" id="dolaroficial">Dólar BNA</div>
                         <div class="col card mb-4 dolar" id="dolarblue">Dólar blue</div>
