--- a/home-banking.html
+++ b/home-banking.html
@@ -17,12 +17,12 @@
         <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
         <link rel="icon" href="./images/logos/ISOLOGO.png">
     </head>
-        <body class="sb-nav-fixed">
-            <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
+        <body class="sb-nav-fixed" >
+            <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark" id="primerabarra">
 
                 <!-- Logo -->
-                <a class="navbar-brand px-3 pt-5" href="./index.html">
-                    <img src="./images/logos/ISOLOGO.png" class="img-fluid float-start" alt="ITBANK" width="100" height="100">
+                <a class="navbar-brand px-3 order-lg-0 me-4 me-lg-0" href="./index.html" >
+                    <img src="./images/logos/ISOLOGO.png" id="Logobarra" class="img-fluid float-start" alt="ITBANK" >
                 </a>
                 <!-- Barra Lateral-->
                 <button class="btn btn-link btn-sm order-1 order-lg-0 me-4 me-lg-0" id="sidebarToggle" href="#!"><i class="fas fa-bars"></i></button>
