--- a/home-banking.html
+++ b/home-banking.html
@@ -14,6 +14,8 @@
         <title>Inicio | ITBANK</title>
         <link href="https://cdn.jsdelivr.net/npm/simple-datatables@latest/dist/style.css" rel="stylesheet" />
         <link href="./CSS/styles.css" rel="stylesheet" />
+        <link href="CSS\stylepers.css" rel="stylesheet" />
+        
         <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
         <link rel="icon" href="./images/logos/ISOLOGO.png">
     </head>
