--- a/signup.html
+++ b/signup.html
@@ -194,6 +194,15 @@
                     </ul>
                 </div>
             </div>
+    
         </footer>
+    <style> 
+    #background{
+    background-image: url('/images/bonaerense/BuenosAires.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+  }
+    </style>
     </body>
+
 </html>
