--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                         </form>
                 </div>
                 <div class="col-md-6 px-0 d-none d-lg-block">
-                    <img src="./images/bonaerense/Jardin-Botanico-Recorte.jpeg" alt="Login image"
+                    <img src="../images/bonaerense/Jardin-Botanico-Recorte.jpeg" alt="Login image"
                     class=" w-100 h-auto" style="object-fit: cover; object-position: left; border-top-right-radius: 50px;">
                 </div>
             </div>
