--- a/signup.html
+++ b/signup.html
@@ -198,7 +198,7 @@
         </footer>
     <style> 
     #background{
-    background-image: url('/images/bonaerense/BuenosAires.jpg');
+    background-image: url('./images/bonaerense/BuenosAires.jpg');
     background-size: cover;
     background-repeat: no-repeat;
   }
