Oxcultamiento de cotizaciones al cargar la página

--- a/index.html
+++ b/index.html
@@ -94,9 +94,9 @@
                             </div>
                         </form>
                 </div>
-                <div class="col-md-6 px-0 d-none d-lg-block">
+                <div class="col-md-6 px-0 d-none d-lg-block" style="object-fit: cover; object-position: cover">
                     <img src="./images/bonaerense/Jardin-Botanico-Recorte.jpeg" alt="Login image"
-                    class=" w-100 h-auto" style="object-fit: cover; object-position: left; border-top-right-radius: 50px;">
+                    class=" w-100 h-auto" style="object-fit: cover; object-position: cover; border-top-right-radius: 50px; ">
                 </div>
             </div>
         </div>
@@ -141,19 +141,19 @@
                     </div>
                 </div>
                 <div id="cotizados" class="container my-5 text-center" >
-                    <h2 class="fw-normal">Cotizaciones</h2>
+                    <h2 class="fw-normal" id="titulocoti"></h2>
                     <div class="row">
-                        <div class="col card mb-4 dolar" id="dolaroficial">Dólar BNA</div>
-                        <div class="col card mb-4 dolar" id="dolarblue">Dólar blue</div>
-                        <div class="col card mb-4 dolar" id="dolarsoja">Dólar soja</div>
+                        <div class="col mb-4" id="dolaroficial"></div>
+                        <div class="col mb-4" id="dolarblue"></div>
+                        <div class="col mb-4" id="dolarsoja"></div>
                     </div>
                     <div class="row">
-                        <div class="col card mb-4 dolar" id="dolarccl">Dólar CCL</div>
-                        <div class="col card mb-4 dolar" id="dolarbolsa">Dólar MEP</div>
-                        <div class="col card mb-4 dolar" id="bitcoin">Bitcoin</div>
+                        <div class="col mb-4" id="dolarccl"></div>
+                        <div class="col mb-4" id="dolarbolsa"></div>
+                        <div class="col mb-4" id="bitcoin"></div>
                     </div>
                     <div class="row">
-                        <div class="col card mb-4 dolar" id="dolarturista">Dolar solidario</div>
+                        <div class="col-4 mb-4" id="dolarturista"></div>
                     </div>
                 </div>
                 <hr>
@@ -277,9 +277,7 @@
             </div>
             <script src="index.js"></script>
         </footer>
-        <style> #cotizado{
-            display:none;
-          }
+        <style> 
           #homeBackground {
     background-image: url('./images/bonaerense/Obelisk.jpg');
     background-size: cover;
