--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                         <p><a class="btn btn-secondary" href="#" id="detalles">Ver Detalles »</a></p>
                     </div>
                 </div>
-                <div id="cotizados" class="container my-5 text-center" >
+                <div id="cotizados" class="container my-5 text-center" ></div>
                     <h2 class="fw-normal" id="titulocoti"></h2>
                     <div class="row">
                         <div class="col mb-4" id="dolaroficial"></div>
