--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                     </div>
                 </div>
                 <div id="cotizados" class="container my-5 text-center" ></div>
-                    <h2 class="fw-normal" id="titulocoti"></h2>
+                    <h2 class="fw-normal" id="titulocoti" style="text-align: center;"></h2>
                     <div class="row">
                         <div class="col mb-4" id="dolaroficial"></div>
                         <div class="col mb-4" id="dolarblue"></div>
