Creación de archivo js para la página principal, función de la sidebar

--- a/home-banking.html
+++ b/home-banking.html
@@ -17,6 +17,7 @@
         <link href="CSS\stylepers.css" rel="stylesheet" />
         
         <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
+        <script src="home-banking.js"></script>
         <link rel="icon" href="./images/logos/ISOLOGO.png">
     </head>
         <body class="sb-nav-fixed" >
