--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
-        <script src="api.js"></script>
+        <script src="./scripts/api/api.js"></script>
     </head>
     <body id="homeBackground">
         <nav class="navbar bg-light border-bottom">
